Fix mobile view design, but still need to work on mobile design

--- a/src/app/components/timeline-feed/timeline-feed.component.css
+++ b/src/app/components/timeline-feed/timeline-feed.component.css
@@ -1,150 +1,110 @@
-@media only screen and (min-width: 900px) {
-  #main-body {
-    padding-right: 0px;
-    padding-left: 0px;
-    overflow: visible;
-  }
-  
-  .center {
-    margin: auto;
-    width: 900px;
-  }
-  
-  ngxMasonryItem:nth-of-type(3n) {
-    margin-right: 0px;
-  }
+/* @media only screen and (min-width: 900px) { */
+#main-body {
+  padding-right: 0px;
+  padding-left: 0px;
+  overflow: visible;
+}
 
-  .card {
-    width: 274px;
-    margin-top: 39px;
-    border: none;
-    border-radius: 20px;
-    display: inline-block;
-  }
+.center {
+  margin: auto;
+  width: 900px;
+}
 
-  .profile-image {
-    margin-top: 10px;
-    margin-bottom: 20px;
-  }
+ngxMasonryItem:nth-of-type(3n) {
+  margin-right: 0px;
+}
 
-  .profile-image img {
-    width: 42px;
-    height: 42px;
-    border-radius: 50%;
-    margin-left: 14px;
-  }
+.card {
+  width: 274px;
+  margin-top: 39px;
+  border: none;
+  border-radius: 20px;
+  display: inline-block;
+}
 
-  .profile-image span {
-    /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+.profile-image {
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+.profile-image img {
+  width: 42px;
+  height: 42px;
+  border-radius: 50%;
+  margin-left: 14px;
+}
+
+.profile-image span {
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     'Helvetica Neue' Helvetica, Arial, sans-serif; */
 
-    font-size: 18px;
-    margin-left: 10px;
-    color: rgb(33,37,41);
-    font-family: arial, 'helvetica', sans-serif;
-    text-align: left;
-  }
-
-  .masonry-img img {
-    width: 197px;
-    height: 295px;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    border-radius: 5px;
-    object-fit: cover;
-  }
-
-  .description {
-    text-align: center;
-    font-weight: 400;
-    color: black;
-  }
-
-  .store.text-right {
-    position: absolute;
-    right: 12px;
-    margin-top: 8px;
-    text-decoration: underline;
-    line-height: 1;
-    color: grey;
-  }
-
-  span.price{
-    position: absolute;
-    left: 12px;
-    margin-top: 8px;
-    color: #2F2E2E;
-    font-weight: 200;
-    font-size: 14px;
-    font-family: open sans, sans-serif;
-    line-height: 1;
-  }
-
-  .card-text {
-    font-size: 15px;
-    height: 48px;
-    width: 100%;
-    margin-top: 14px;
-    margin-bottom: 8px;
-    font-family: 'helvetica', arial, sans-serif;
-  }
+  font-size: 18px;
+  margin-left: 10px;
+  color: rgb(33, 37, 41);
+  font-family: arial, 'helvetica', sans-serif;
+  text-align: left;
 }
+
+.masonry-img img {
+  width: 197px;
+  height: 295px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  border-radius: 5px;
+  object-fit: cover;
+}
+
+.description {
+  text-align: center;
+  font-weight: 400;
+  color: black;
+}
+
+.store.text-right {
+  position: absolute;
+  right: 12px;
+  margin-top: 8px;
+  text-decoration: underline;
+  line-height: 1;
+  color: grey;
+}
+
+span.price {
+  position: absolute;
+  left: 12px;
+  margin-top: 8px;
+  color: #2f2e2e;
+  font-weight: 200;
+  font-size: 14px;
+  font-family: open sans, sans-serif;
+  line-height: 1;
+}
+
+.card-text {
+  font-size: 15px;
+  height: 48px;
+  width: 100%;
+  margin-top: 14px;
+  margin-bottom: 8px;
+  font-family: 'helvetica', arial, sans-serif;
+}
+/* } */
 
 @media (min-width: 576px) {
 }
 
 @media (min-width: 360px) and (max-width: 376px) {
-  body {
-    padding-right: 0px;
-    padding-left: 0px;
-  }
   .center {
-    background-color: #f9f9f9;
-    margin-left: 0;
-    margin-right: 0;
-  }
-  .masonry-item {
-    width: 50%;
-  }
-  .masonry-item img {
-    /* width: 100px; */
-    width: 85%;
-    height: 200px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 15px;
-    display: block;
+    margin: auto;
+    width: initial;
   }
 
   .card {
-    height: 300px;
-    margin: 20px;
-    /* margin-top: 35px; */
+    width: 400px;
+    margin-top: 39px;
     border: none;
-    border-radius: 10px;
-  }
-
-  .description {
-    text-align: center;
-  }
-
-  span.store.text-right {
-    float: right;
-    clear: right;
-    text-decoration: underline;
-  }
-  span.text-left {
-    float: left;
-    clear: left;
-  }
-
-  .card-text {
-    font-weight: 400px;
-    font-size: 12px;
-    height: 48px;
-    margin-top: 30px;
-    /* font-family: 'Roboto', sans-serif; */
-    font-family: 'helvetica', sans-serif;
+    border-radius: 20px;
+    display: inline-block;
   }
 }
